GNOME Bugzilla – Bug 708435
[REGRESSION] _gdk_pixbuf_new_from_uri_at_scale: Process /usr/bin/nautilus was killed by signal 11 (SIGSEGV)
Last modified: 2013-09-21 13:24:28 UTC
Bad commit: https://git.gnome.org/browse/gnome-desktop/commit/libgnome-desktop/gnome-desktop-thumbnail.c?id=d045e367cc37c774e3d76839b65aaf947b2f65ad Tried to open recent in nautilus and its crashed. Trace: https://bugzilla.redhat.com/show_bug.cgi?id=1010155 (gdb) p error->message Cannot access memory at address 0x8
*** Bug 708417 has been marked as a duplicate of this bug. ***
Created attachment 255378 [details] [review] libgsystem: Update from master d045e367cc37c774e3d76839b65aaf947b2f65ad is expecting gs_file_read_noatime to always return an error, but the commit that did that was never pulled in to gnome-desktop. Do that now to fix possible crashers with nautilus.
Created attachment 255379 [details] [review] fileutil: Handle recent: and trash: URIs The gs_file_get_path_cached() was rather brittle in its handling of URIs. It would assert() when a GFile didn't have a backing path (such as when handling trash: or recent: URIs), and didn't know how to get the target URI for those items either. Make sure that we do not assert() when a backing path cannot be found, and handle recent: and trash: URIs.
Review of attachment 255378 [details] [review]: Obviously, this will need to be updated after we commit the following patch.
Review of attachment 255379 [details] [review]: Reported-and-tested-by: Igor Gnatenko <i.gnatenko.brain@gmail.com> After this patch bug is fixed. Thanks.
Review of attachment 255379 [details] [review]: Looks good to me, thank you!
My opinion: go back to g_file_read - gs_file_read_noatime is an incomplete fork of it, and pulling in a whole copylib for this minor optimization seems misguided. Plus, it causes problems, as we're seening here.
(In reply to comment #7) > My opinion: go back to g_file_read - gs_file_read_noatime is an incomplete fork > of it, and pulling in a whole copylib for this minor optimization seems > misguided. Plus, it causes problems, as we're seening here. At this point, it's quicker to fix the code that exists that bring brand new code. There's already bug 708453 for not using libgsystem (and maybe just g_file_read() in that case).
ok
Comment on attachment 255379 [details] [review] fileutil: Handle recent: and trash: URIs Attachment 255379 [details] pushed as 66140c0 - fileutil: Handle recent: and trash: URIs
Attachment 255378 [details] pushed as ccc7dda - libgsystem: Update from master
Thanks.
*** Bug 708531 has been marked as a duplicate of this bug. ***